--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,4 +1,13 @@
 .page {
+  display: inline-flex;
+  /* display: -webkit-inline-flex;*/
+  margin: 0px;
+  padding: 0px;
+  font-family: sans-serif;
+  width: 100%;
+  height: 100vh;
+}
+.body__adaptive{
   margin: 0px;
   padding: 0px;
   font-family: sans-serif;
@@ -6,10 +15,17 @@
   height: 100vh;
 }
 .page__inner {
-  display: inline-block;
+  display: inline-table;/*changed this*/
+  position: relative; /*this*/
   vertical-align: top;
   padding: 30px 50px;
   width: calc(100% - 26%);
+}
+.page__content--hr{
+  width:100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .page__content--ib {
   display: inline-block;
@@ -96,12 +112,17 @@
   transition: .3s ease;
 }
 .page__icon--small {
-  min-height: 25px;
-  max-height: 25px;
+  min-height: 20px;
+  max-height: 20px;
+}
+.page__table{
+  white-space:nowrap;
+  display: flexbox;
 }
 .page__table--title {
   padding: 10px;
   margin: 0;
+  display: inline-block;
 }
 .page__table--number {
   max-width: 50px;
@@ -111,10 +132,21 @@
 .page__table--name {
   width: 70%;
 }
+.page__table--title-status{
+  white-space: nowrap;
+}
 .page__table--status,
 .page__table--buttons {
   width: 12%;
   text-align: center;
+  position: absolute;
+}
+
+.page__table--status-select{
+  padding-top:12px;
+}
+.page__table--buttons{
+  margin-left:100px;
 }
 .page__table-item {
   display: inline-block;
@@ -124,8 +156,17 @@
   margin: 10px;
 }
 .page__table-item--header {
-  background-color: #1e90ff;
+  background: #0071e2;
   font-weight: 900;
+  width:auto;
+}
+.page__table-item--header-no-blue{
+  font-weight: 900;
+  width:auto;
+}
+.page__table-item--list{
+  display: inline-flex;
+  list-style: none;
 }
 .page__form-item {
   margin: 13px auto;
@@ -172,10 +213,10 @@
   text-decoration: none;
 }
 .sidebar {
-  display: inline-block;
+  display: inline-table;
   background-color: #121212;
   height: 100%;
-  position: relative;
+  position: relative; /*this*/
   min-width: 300px;
 }
 .sidebar__item--footer {
@@ -197,7 +238,7 @@
   padding: 0px;
   margin: 0;
 }
-.sidebar__menu-item {
+.sidebar__menu-item, .topbar__menu-item{
   padding: 17px 20px;
   display: block;
   font-size: 18px;
@@ -206,17 +247,17 @@
   overflow: hidden;
   transition: .3s ease;
 }
-.sidebar__menu-item--link {
+.sidebar__menu-item--link, .topbar__menu-item--link {
   color: #fff;
 }
-.sidebar__menu-item--link:hover {
+.sidebar__menu-item--link:hover, .topbar__menu-item--link:hover {
   color: #1e90ff;
   background-color: #fff;
 }
-.sidebar__menu-item--exit {
+.sidebar__menu-item--exit, .topbar__menu-item--exit {
   color: #de0000;
 }
-.sidebar__menu-item--exit:hover {
+.sidebar__menu-item--exit:hover, .topbar__menu-item--exit:hover{
   color: #fff;
   background-color: #de0000;
 }
@@ -226,10 +267,48 @@
 .sidebar__logo-image {
   width: auto;
   max-height: 250px;
+  max-width: 300px; /*added this*/
   -o-object-fit: cover;
   object-fit: cover;
   -o-object-position: center;
   object-position: center;
   overflow: hidden;
   vertical-align: middle;
+}
+/*---HERE BELOW GOES CSS FOR ADAPTIVE VERSION OF departmenrs.html----*/
+.topbar{
+  margin-top:0px;
+  min-width: max-content;
+  vertical-align: top;
+  text-align: center;
+  background-color: #121212;
+}
+.topbar__menu {
+  display: inline-flex;
+  list-style: none;
+  padding: 0px;
+  margin: 0;
+}
+
+.topbar__title {
+  color: #1e90ff;
+  text-align: center;
+  padding-top: 15px;
+}
+.topbar__title-text{
+  margin-top:0px;
+}
+
+.page__table_adapt{
+  width: 100%;
+  position: absolute;
+  white-space: nowrap;
+  display: inline-block;
+}
+
+.form__fail {
+  position: relative;
+  max-height: 100px;
+  overflow: hidden;
+  transition: .3s ease;
 }
