--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,6 +98,7 @@
 .form__icon--fail {
   left: 10px;
   top: -2px;
+  margin-top:2px;
 }
 .form__icon--success {
   position: relative;
@@ -130,7 +131,7 @@
 .form__fail {
   margin: 10px auto;
   position: relative;
-  max-height: 0px;
+  max-height: 100px;
   overflow: hidden;
   transition: .3s ease;
 }
