--- a/public/css/admin.less
+++ b/public/css/admin.less
@@ -21,6 +21,8 @@
 }
 
 .page {
+    display: inline-flex;
+    display: -webkit-inline-flex;
     margin: 0px;
     padding: 0px;
     font-family: sans-serif;
@@ -28,7 +30,8 @@
     height: 100vh;
 
     &__inner {
-        display: inline-block;
+        display: inline-table;/*changed this*/
+        position: relative; /*this*/
         vertical-align: top;
         padding: 30px 50px;
         width: ~'calc(100% - 26%)';
@@ -45,6 +48,13 @@
             height: 100vh;
             right: 0;
             top: 0;
+        }
+
+        &--hr{
+            width:100%;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
         }
     }
 
@@ -78,7 +88,7 @@
 
     &__item {
         &--block {
-            display: inline-block;
+            display: inline-flex;
             width: 30%;
             margin: 10px 20px;
 
@@ -149,19 +159,30 @@
         }
 
         &--small {
-            min-height: 25px;
-            max-height: 25px;
+            min-height: 20px;
+            max-height: 20px;
         }
     }
 
-    &__table {       
+    &__table {
+        white-space:nowrap;
+        display: flexbox;
+
         &--title {
             padding: 10px;
             margin: 0;
+            display: inline-block;
         }
 
+        &_adapt{
+            width: 100%;
+            position: absolute;
+            white-space: nowrap;
+            display: inline-block;
+          }
+
         &--number {
-            max-width: 50px;
+            ma-width: 50px;
             width: 100%;
             text-align: center;
         }
@@ -169,11 +190,24 @@
         &--name {
             width: 70%;
         }
+        
+        &--status{
+            white-space: nowrap;
+        }
+
+        &--buttons{
+            margin-left:100px;
+        }
 
         &--status,
         &--buttons {
             width: 12%;
             text-align: center;
+            position: absolute;
+        }
+        
+        &--status-option{
+            margin-top:12px;
         }
 
         &-item {
@@ -187,6 +221,21 @@
             &--header {
                 background-color: @color-blue;
                 font-weight: 900;
+                width:auto;
+            }
+
+            &--header-hr {
+                display: none;
+            }
+            
+            &--header-no-blue{
+                font-weight: 900;
+                width:auto;
+            }
+
+            &--list{
+                display: inline-flex;
+                list-style: none;
             }
         }
     }
@@ -196,7 +245,7 @@
             margin: 13px auto;
             
             &--background {
-                background-color: @color-light-gray;
+                background-color: #dcdcdc;
                 background-size: cover;
                 background-position: center;
                 min-height: 200px;
@@ -247,8 +296,8 @@
 }
 
 .sidebar {
-    display: inline-block;
-    background-color: @color-black;
+    display: inline-table;
+    background-color: #121212;
     height: 100%;
     position: relative;
     min-width: 300px;
@@ -285,6 +334,12 @@
             overflow: hidden;
             .tr3();
             
+            &--image {
+                display: none;
+                width: 10%;
+                height: 10%;
+                padding-right: 10px;
+            }
             &--link {
                 color: @color-white;
                 &:hover {
@@ -309,12 +364,31 @@
         &-image {
             width: auto;
             max-height: 250px;
+            max-width: 300px; /*added this*/
             -o-object-fit: cover;
-               object-fit: cover;
+            object-fit: cover;
             -o-object-position: center;
-               object-position: center;
+            object-position: center;
             overflow: hidden;
             vertical-align: middle;
         }
+    }
+}
+
+.form{
+    &__fail{
+        position: relative;
+        max-height: 100px;
+        overflow: hidden;
+        .tr3();
+    }
+}
+.body{
+    &__adaptive{
+        margin: 0px;
+        padding: 0px;
+        font-family: sans-serif;
+        width: 100%;
+        height: 100vh;
     }
 }
